CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(HelloLib)

ADD_LIBRARY(hello hello.cpp)
set_target_properties(hello PROPERTIES PUBLIC_HEADER "hello.h")

INSTALL(TARGETS hello
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
